syntax = "proto3";
  option go_package="github/w3gop2p/GRPC-middleware/ch2/order/proto";

message CreateOrderRequest {
  int32 user_id = 1;
  int32 product_id = 2;
  float price = 3;
}

message CreateOrderResponse {
  int32 order_id = 1;
  string product_title = 2;
}

service OrderService {
  rpc Create(CreateOrderRequest) returns (CreateOrderResponse){}
}